force-app/main/default/objects/Protocol_Steps__c/Protocol_Steps__c.object-meta.xml
<CustomObject>
    <label>Protocol Step</label>
    <nameField>
        <label>Protocol Steps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protocol Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>