force-app/main/default/objects/Protocol_Steps__c/fields/Day_of_Step__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Step__c</fullName>
    <label>Day of Step</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>