force-app/main/default/objects/Protocol_Steps__c/fields/Step_Notes__c.field-meta.xml
<CustomField>
    <fullName>Step_Notes__c</fullName>
    <label>Step Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>