force-app/main/default/objects/Protocol_Steps__c/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Step_Type</valueSetName>
    </valueSet>
</CustomField>