force-app/main/default/objects/Protocol_Steps__c/fields/Test_to_Be_Undertaken__c.field-meta.xml
<CustomField>
    <fullName>Test_to_Be_Undertaken__c</fullName>
    <label>Test to Be Undertaken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>